# python-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
mcp_server/: __main__.py  server.py
tests/: test_tools.py
