[project]
name = "python-mcp-server"
version = "0.1.0"
description = "MCP server with calculator, time, and memo tools"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
mcp-server = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
